--- a/build.xml
+++ b/build.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="colt-core" default="all">
-
+  
+  
   <property file="build.properties"/>
-
   <!-- Uncomment the following property if no tests compilation is needed -->
   <!-- 
   <property name="skip.tests" value="true"/>
    -->
   
-  <!-- Compiler options -->  
+  <!-- Compiler options -->
+  
   <property name="compiler.debug" value="on"/>
   <property name="compiler.generate.no.warnings" value="off"/>
   <property name="compiler.args" value=""/>
@@ -93,9 +94,6 @@
   <property name="project.jdk.home" value="${jdk.home.1.8}"/>
   <property name="project.jdk.bin" value="${jdk.bin.1.8}"/>
   <property name="project.jdk.classpath" value="jdk.classpath.1.8"/>
-  
-  
-  <!-- Project Libraries -->
   
   
   <!-- Global Libraries -->
@@ -259,5 +257,99 @@
   
   <target name="build.modules" depends="init, clean, compile.module.colt-core" description="build all modules"/>
   
-  <target name="all" depends="build.modules" description="build all"/>
+  <target name="init.artifacts">
+    <property name="artifacts.temp.dir" value="${basedir}/__artifacts_temp"/>
+    <property name="artifact.output.colt-core" value="${colt.output.dir}"/>
+    <mkdir dir="${artifacts.temp.dir}"/>
+    <mkdir dir="${colt.output.dir}"/>    
+    <property name="temp.jar.path.colt-core.jar" value="${artifacts.temp.dir}/colt-core.jar"/>
+  </target>
+  
+  <target name="artifact.colt-core" depends="init.artifacts, compile.module.colt-core" description="Build &#39;colt-core&#39; artifact">
+    <property name="artifact.temp.output.colt-core" value="${artifacts.temp.dir}/colt_core"/>
+    <mkdir dir="${artifact.temp.output.colt-core}"/>
+    <jar destfile="${temp.jar.path.colt-core.jar}" duplicate="preserve" filesetmanifest="mergewithoutmain">
+      <zipfileset dir="${colt-core.output.dir}"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/ant-1.8.4.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/ant-antlr-1.8.4.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/ant-junit-1.8.4.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/ant-launcher-1.8.4.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/antlr-2.7.7.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/asm-4.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/asm-analysis-4.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/asm-commons-4.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/asm-tree-4.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/asm-util-4.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/bsf-2.4.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/commons-cli-1.2.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/commons-logging-1.1.1.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/gpars-1.0.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-ant-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-bsf-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-console-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-docgenerator-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-groovydoc-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-groovysh-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-jmx-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-json-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-jsr223-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-servlet-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-sql-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-swing-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-templates-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-test-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-testng-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/groovy-xml-2.1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/hamcrest-core-1.3.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/ivy-2.2.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/jansi-1.6.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/jcommander-1.27.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/jline-1.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/jsp-api-2.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/jsr166y-1.7.0.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/junit-4.11.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/qdox-1.12.1.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/servlet-api-2.4.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/testng-6.8.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/xmlpull-1.1.3.1.jar"/>
+      <zipfileset src="${basedir}/../../Downloads/groovy-2.1.6/lib/xstream-1.4.2.jar"/>
+      <zipfileset src="${basedir}/lib/ant.jar"/>
+      <zipfileset src="${basedir}/lib/aquafx-0.1.jar"/>
+      <zipfileset src="${basedir}/lib/httpclient.jar"/>
+      <zipfileset src="${basedir}/lib/ScenicView.jar"/>
+      <zipfileset src="${basedir}/lib/jetty-6.1.26.jar"/>
+      <zipfileset src="${basedir}/lib/colt-groovyfx.jar"/>
+      <zipfileset src="${basedir}/lib/groovyfx-0.3.1.jar"/>
+      <zipfileset src="${basedir}/lib/jsonrpc4j-0.28.jar"/>
+      <zipfileset src="${basedir}/lib/portlet-api-2.0.jar"/>
+      <zipfileset src="${basedir}/lib/servlet-api-2.5.jar"/>
+      <zipfileset src="${basedir}/lib/slf4j-api-1.7.5.jar"/>
+      <zipfileset src="${basedir}/lib/controlsfx-8.0.1.jar"/>
+      <zipfileset src="${basedir}/lib/grooscript-0.2.4.jar"/>
+      <zipfileset src="${basedir}/lib/commons-codec-1.3.jar"/>
+      <zipfileset src="${basedir}/lib/jetty-util-6.1.26.jar"/>
+      <zipfileset src="${basedir}/lib/aquafx-0.1-sources.jar"/>
+      <zipfileset src="${basedir}/lib/jackson-core-2.2.0.jar"/>
+      <zipfileset src="${basedir}/lib/slf4j-simple-1.7.5.jar"/>
+      <zipfileset src="${basedir}/lib/log4j-api-2.0-beta8.jar"/>
+      <zipfileset src="${basedir}/lib/log4j-core-2.0-beta8.jar"/>
+      <zipfileset src="${basedir}/lib/jackson-databind-2.2.0.jar"/>
+      <zipfileset src="${basedir}/lib/jgoogleanalyticstracker.jar"/>
+      <zipfileset src="${basedir}/lib/jackson-annotations-2.2.0.jar"/>
+    </jar>
+    <copy file="${temp.jar.path.colt-core.jar}" tofile="${artifact.temp.output.colt-core}/colt-core.jar"/>
+  </target>
+  
+  <target name="build.all.artifacts" depends="artifact.colt-core" description="Build all artifacts">
+    <mkdir dir="${artifact.output.colt-core}"/>
+    <copy todir="${artifact.output.colt-core}">
+      <fileset dir="${artifact.temp.output.colt-core}"/>
+    </copy>
+    
+    <!-- Delete temporary files -->
+    <delete dir="${artifacts.temp.dir}"/>
+  </target>
+  
+  <target name="all" depends="build.modules, build.all.artifacts" description="build all"/>
 </project>
