--- a/build.xml
+++ b/build.xml
@@ -259,9 +259,9 @@
   
   <target name="init.artifacts">
     <property name="artifacts.temp.dir" value="${basedir}/__artifacts_temp"/>
-    <property name="artifact.output.colt-core" value="${colt.output.dir}"/>
+    <property name="artifact.output.colt-core" value="${colt.output.dir}/generic"/>
     <mkdir dir="${artifacts.temp.dir}"/>
-    <mkdir dir="${colt.output.dir}"/>    
+    <mkdir dir="${artifact.output.colt-core}"/>    
     <property name="temp.jar.path.colt-core.jar" value="${artifacts.temp.dir}/colt-core.jar"/>
   </target>
   
@@ -325,7 +325,7 @@
       <zipfileset src="${basedir}/lib/portlet-api-2.0.jar"/>
       <zipfileset src="${basedir}/lib/servlet-api-2.5.jar"/>
       <zipfileset src="${basedir}/lib/slf4j-api-1.7.5.jar"/>
-      <zipfileset src="${basedir}/lib/controlsfx-8.0.1.jar"/>
+      <zipfileset src="${basedir}/lib/controlsfx-8.0.2-SNAPSHOT.jar"/>
       <zipfileset src="${basedir}/lib/grooscript-0.2.4.jar"/>
       <zipfileset src="${basedir}/lib/commons-codec-1.3.jar"/>
       <zipfileset src="${basedir}/lib/jetty-util-6.1.26.jar"/>
