--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 .idea/workspace.xml
 build
 out/*
-.DS_Store
 
 .gradle/*
 
@@ -15,3 +14,17 @@ build.properties
 
 /colt-core.iml
 .idea
+
+# Auxiliary Files
+*.min.css
+*.sublime-*
+*.zip
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
