--- a/build.xml
+++ b/build.xml
@@ -98,55 +98,55 @@
   <property name="project.jdk.home" value="${jdk.home.1.8}"/>
   <property name="project.jdk.bin" value="${jdk.bin.1.8}"/>
   <property name="project.jdk.classpath" value="jdk.classpath.1.8"/>
-  
-  
+
+
   <!-- Global Libraries -->
-  
+
   <path id="library.groovy.classpath">
-    <pathelement location="${groovy.home}/lib/ant-1.8.4.jar"/>
-    <pathelement location="${groovy.home}/lib/ant-antlr-1.8.4.jar"/>
-    <pathelement location="${groovy.home}/lib/ant-junit-1.8.4.jar"/>
-    <pathelement location="${groovy.home}/lib/ant-launcher-1.8.4.jar"/>
-    <pathelement location="${groovy.home}/lib/antlr-2.7.7.jar"/>
-    <pathelement location="${groovy.home}/lib/asm-4.0.jar"/>
-    <pathelement location="${groovy.home}/lib/asm-analysis-4.0.jar"/>
-    <pathelement location="${groovy.home}/lib/asm-commons-4.0.jar"/>
-    <pathelement location="${groovy.home}/lib/asm-tree-4.0.jar"/>
-    <pathelement location="${groovy.home}/lib/asm-util-4.0.jar"/>
+    <pathelement location="${groovy.home}/lib/ant-1.9.4.jar"/>
+    <pathelement location="${groovy.home}/lib/ant-antlr-1.9.4.jar"/>
+    <pathelement location="${groovy.home}/lib/ant-junit-1.9.4.jar"/>
+    <pathelement location="${groovy.home}/lib/ant-launcher-1.9.4.jar"/>
     <pathelement location="${groovy.home}/lib/bsf-2.4.0.jar"/>
     <pathelement location="${groovy.home}/lib/commons-cli-1.2.jar"/>
-    <pathelement location="${groovy.home}/lib/commons-logging-1.1.1.jar"/>
-    <pathelement location="${groovy.home}/lib/gpars-1.0.0.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-ant-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-bsf-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-console-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-docgenerator-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-groovydoc-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-groovysh-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-jmx-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-json-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-jsr223-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-servlet-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-sql-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-swing-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-templates-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-test-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-testng-2.1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/groovy-xml-2.1.6.jar"/>
+    <pathelement location="${groovy.home}/lib/commons-logging-1.2.jar"/>
+    <pathelement location="${groovy.home}/lib/gpars-1.2.1.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-ant-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-bsf-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-console-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-docgenerator-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-groovydoc-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-groovysh-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-jmx-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-json-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-jsr223-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-servlet-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-sql-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-swing-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-templates-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-test-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-testng-2.4.3.jar"/>
+    <pathelement location="${groovy.home}/lib/groovy-xml-2.4.3.jar"/>
     <pathelement location="${groovy.home}/lib/hamcrest-core-1.3.jar"/>
-    <pathelement location="${groovy.home}/lib/ivy-2.2.0.jar"/>
-    <pathelement location="${groovy.home}/lib/jansi-1.6.jar"/>
-    <pathelement location="${groovy.home}/lib/jcommander-1.27.jar"/>
-    <pathelement location="${groovy.home}/lib/jline-1.0.jar"/>
+    <pathelement location="${groovy.home}/lib/ivy-2.4.0.jar"/>
+    <pathelement location="${groovy.home}/lib/jansi-1.11.jar"/>
+    <pathelement location="${groovy.home}/lib/jcommander-1.47.jar"/>
+    <pathelement location="${groovy.home}/lib/jline-2.12.jar"/>
     <pathelement location="${groovy.home}/lib/jsp-api-2.0.jar"/>
     <pathelement location="${groovy.home}/lib/jsr166y-1.7.0.jar"/>
-    <pathelement location="${groovy.home}/lib/junit-4.11.jar"/>
+    <pathelement location="${groovy.home}/lib/junit-4.12.jar"/>
     <pathelement location="${groovy.home}/lib/qdox-1.12.1.jar"/>
     <pathelement location="${groovy.home}/lib/servlet-api-2.4.jar"/>
-    <pathelement location="${groovy.home}/lib/testng-6.8.jar"/>
+    <pathelement location="${groovy.home}/lib/testng-6.8.13.jar"/>
     <pathelement location="${groovy.home}/lib/xmlpull-1.1.3.1.jar"/>
-    <pathelement location="${groovy.home}/lib/xstream-1.4.2.jar"/>
+    <pathelement location="${groovy.home}/lib/xstream-1.4.7.jar"/>
+    <pathelement location="${basedir}/lib/antlr-4.5.jar"/>
+    <pathelement location="${basedir}/lib/asm-5.0.3.jar"/>
+    <pathelement location="${basedir}/lib/asm-analysis-5.0.3.jar"/>
+    <pathelement location="${basedir}/lib/asm-commons-5.0.3.jar"/>
+    <pathelement location="${basedir}/lib/asm-tree-5.0.3.jar"/>
+    <pathelement location="${basedir}/lib/asm-util-5.0.3.jar"/>
   </path>
   <!-- Register Custom Compiler Taskdefs -->
   <target name="register.custom.compilers">
@@ -229,7 +229,7 @@
   
   <target name="compile.module.colt-core.production" depends="register.custom.compilers" description="Compile module colt-core; production classes">
     <mkdir dir="${colt-core.output.dir}"/>
-    <groovyc destdir="${colt-core.output.dir}" fork="yes">
+    <groovyc destdir="${colt-core.output.dir}">
       <src refid="colt-core.module.sourcepath"/>
       <classpath refid="colt-core.module.production.classpath"/>
       <patternset refid="excluded.from.compilation.colt-core"/>
@@ -274,51 +274,51 @@
     <mkdir dir="${artifact.temp.output.colt-core}"/>
     <jar destfile="${temp.jar.path.colt-core.jar}" duplicate="preserve" filesetmanifest="mergewithoutmain">
       <zipfileset dir="${colt-core.output.dir}"/>
-      <zipfileset src="${groovy.home}/lib/ant-1.8.4.jar"/>
-      <zipfileset src="${groovy.home}/lib/ant-antlr-1.8.4.jar"/>
-      <zipfileset src="${groovy.home}/lib/ant-junit-1.8.4.jar"/>
-      <zipfileset src="${groovy.home}/lib/ant-launcher-1.8.4.jar"/>
-      <zipfileset src="${groovy.home}/lib/antlr-2.7.7.jar"/>
-      <zipfileset src="${groovy.home}/lib/asm-4.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/asm-analysis-4.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/asm-commons-4.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/asm-tree-4.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/asm-util-4.0.jar"/>
+      <zipfileset src="${groovy.home}/lib/ant-1.9.4.jar"/>
+      <zipfileset src="${groovy.home}/lib/ant-antlr-1.9.4.jar"/>
+      <zipfileset src="${groovy.home}/lib/ant-junit-1.9.4.jar"/>
+      <zipfileset src="${groovy.home}/lib/ant-launcher-1.9.4.jar"/>
       <zipfileset src="${groovy.home}/lib/bsf-2.4.0.jar"/>
       <zipfileset src="${groovy.home}/lib/commons-cli-1.2.jar"/>
-      <zipfileset src="${groovy.home}/lib/commons-logging-1.1.1.jar"/>
-      <zipfileset src="${groovy.home}/lib/gpars-1.0.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-ant-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-bsf-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-console-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-docgenerator-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-groovydoc-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-groovysh-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-jmx-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-json-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-jsr223-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-servlet-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-sql-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-swing-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-templates-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-test-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-testng-2.1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/groovy-xml-2.1.6.jar"/>
+      <zipfileset src="${groovy.home}/lib/commons-logging-1.2.jar"/>
+      <zipfileset src="${groovy.home}/lib/gpars-1.2.1.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-ant-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-bsf-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-console-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-docgenerator-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-groovydoc-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-groovysh-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-jmx-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-json-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-jsr223-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-servlet-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-sql-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-swing-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-templates-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-test-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-testng-2.4.3.jar"/>
+      <zipfileset src="${groovy.home}/lib/groovy-xml-2.4.3.jar"/>
       <zipfileset src="${groovy.home}/lib/hamcrest-core-1.3.jar"/>
-      <zipfileset src="${groovy.home}/lib/ivy-2.2.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/jansi-1.6.jar"/>
-      <zipfileset src="${groovy.home}/lib/jcommander-1.27.jar"/>
-      <zipfileset src="${groovy.home}/lib/jline-1.0.jar"/>
+      <zipfileset src="${groovy.home}/lib/ivy-2.4.0.jar"/>
+      <zipfileset src="${groovy.home}/lib/jansi-1.11.jar"/>
+      <zipfileset src="${groovy.home}/lib/jcommander-1.47.jar"/>
+      <zipfileset src="${groovy.home}/lib/jline-2.12.jar"/>
       <zipfileset src="${groovy.home}/lib/jsp-api-2.0.jar"/>
       <zipfileset src="${groovy.home}/lib/jsr166y-1.7.0.jar"/>
-      <zipfileset src="${groovy.home}/lib/junit-4.11.jar"/>
+      <zipfileset src="${groovy.home}/lib/junit-4.12.jar"/>
       <zipfileset src="${groovy.home}/lib/qdox-1.12.1.jar"/>
       <zipfileset src="${groovy.home}/lib/servlet-api-2.4.jar"/>
-      <zipfileset src="${groovy.home}/lib/testng-6.8.jar"/>
+      <zipfileset src="${groovy.home}/lib/testng-6.8.13.jar"/>
       <zipfileset src="${groovy.home}/lib/xmlpull-1.1.3.1.jar"/>
-      <zipfileset src="${groovy.home}/lib/xstream-1.4.2.jar"/>
+      <zipfileset src="${groovy.home}/lib/xstream-1.4.7.jar"/>
       <zipfileset src="${basedir}/lib/ant.jar"/>
+      <zipfileset src="${basedir}/lib/antlr-4.5.jar"/>
+      <zipfileset src="${basedir}/lib/asm-5.0.3.jar"/>
+      <zipfileset src="${basedir}/lib/asm-analysis-5.0.3.jar"/>
+      <zipfileset src="${basedir}/lib/asm-commons-5.0.3.jar"/>
+      <zipfileset src="${basedir}/lib/asm-tree-5.0.3.jar"/>
+      <zipfileset src="${basedir}/lib/asm-util-5.0.3.jar"/>
       <zipfileset src="${basedir}/lib/httpclient.jar"/>
       <zipfileset src="${basedir}/lib/ScenicView.jar"/>
       <zipfileset src="${basedir}/lib/jetty-6.1.26.jar"/>
@@ -326,7 +326,7 @@
       <zipfileset src="${basedir}/lib/groovy-fx-goodies.jar"/>
       <zipfileset src="${basedir}/lib/jsonrpc4j-0.28.jar"/>
       <zipfileset src="${basedir}/lib/portlet-api-2.0.jar"/>
-      <zipfileset src="${basedir}/lib/servlet-api-2.5.jar"/>
+      <zipfileset src="${basedir}/lib/servlet-api-2.4.jar"/>
       <zipfileset src="${basedir}/lib/slf4j-api-1.7.5.jar"/>
       <zipfileset src="${basedir}/lib/controlsfx-8.0.2-SNAPSHOT.jar"/>
       <zipfileset src="${basedir}/lib/grooscript-0.2.4.jar"/>
@@ -360,7 +360,7 @@
   </target>
   
   <target name="copy.colt.resources">
-	<copy file="${basedir}/crossdomain.xml" todir="${artifact.output.colt-core}"/>
+	<copy file="${basedir}/../colt-as/crossdomain.xml" todir="${artifact.output.colt-core}"/>
   </target>
   
   <target name="package.mac" if="isMac">
